# twain

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
resources/: icons.qrc
src/: CppHighlighter.cpp  CppHighlighter.h  DebugLog.cpp  DebugLog.h  Diff.cpp  Diff.h  DiffOverview.cpp  DiffOverview.h  DiffPane.cpp  DiffPane.h  DiffView.cpp  DiffView.h  HighlighterFactory.cpp  HighlighterFactory.h  ImageDiffView.cpp  ImageDiffView.h  JsonHighlighter.cpp  JsonHighlighter.h  MainWindow.cpp  MainWindow.h  MakefileHighlighter.cpp  MakefileHighlighter.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  PythonHighlighter.cpp  PythonHighlighter.h  ShellHighlighter.cpp  ShellHighlighter.h  TreeCompare.cpp  TreeCompare.h  TreeCompareModel.cpp  TreeCompareModel.h  TreeCompareView.cpp  TreeCompareView.h  YamlHighlighter.cpp  YamlHighlighter.h  main.cpp
tests/: test_diff.cpp  test_treecompare.cpp
